Gộp giao diện hóa đơn + login

--- a/development/source-code/resources/assets/sass/app.scss
+++ b/development/source-code/resources/assets/sass/app.scss
@@ -6,6 +6,7 @@
 // Modules
 @import "modules/trang-chu";
 @import "modules/_nhan-vien";
+@import "modules/_dang_nhap";
 
 // Bootstrap
 // @import "node_modules/bootstrap-sass/assets/stylesheets/bootstrap";
