Thêm các đường dẫn đến các trang xử lý đơn hàng vào left_section. Thêm module _danh-sach-don-hang.scss và import vào app.scss.

--- a/development/source-code/resources/assets/sass/app.scss
+++ b/development/source-code/resources/assets/sass/app.scss
@@ -2,11 +2,10 @@
 // @import url(https://fonts.googleapis.com/css?family=Raleway:300,400,600);
 // Variables
 @import "variables";
-
 // Modules
 @import "modules/trang-chu";
 @import "modules/_nhan-vien";
 @import "modules/_dang_nhap";
-
+@import "modules/_danh-sach-don-hang";
 // Bootstrap
 // @import "node_modules/bootstrap-sass/assets/stylesheets/bootstrap";
