--- a/development/source-code/resources/assets/sass/modules/trang-chu.scss
+++ b/development/source-code/resources/assets/sass/modules/trang-chu.scss
@@ -5,7 +5,9 @@ body{
         }
 
         .pagination{
-            padding-left: 75%;
+            padding-left: 20%;
+            display:inline !important;
+        
         }
        
     #datatable tr:hover {
