--- a/development/source-code/resources/assets/sass/app.scss
+++ b/development/source-code/resources/assets/sass/app.scss
@@ -1,7 +1,7 @@
 // Fonts
 // @import url(https://fonts.googleapis.com/css?family=Raleway:300,400,600);
 //Global
-@import "modules/base";
+@import "base";
 // Variables
 @import "variables";
 // Modules
