--- a/development/source-code/public/assets/css/app.css
+++ b/development/source-code/public/assets/css/app.css
@@ -22,33 +22,34 @@ body .right_col .profile_content_table tr {
 body .panel.panel-custom {
   margin-top: 20%; }
 
-body .top_search .form-control {
+body .donhang .top_search .form-control,
+body .donhang .top_search .form-control:focus {
   border: 1px solid #D9DEE4; }
 
-body .top_search .input-group-btn button {
+body .donhang .top_search .input-group-btn button {
   border: 1px solid #D9DEE4;
   border-left: 1px solid #D9DEE4; }
 
-body .page-title .title_left .breadcrumb {
+body .donhang .page-title .title_left .breadcrumb {
   background-color: #F7F7F7;
   float: left; }
 
-body .page-title .title_right {
+body .donhang .page-title .title_right {
   width: 100%; }
-  body .page-title .title_right ul {
+  body .donhang .page-title .title_right ul {
     margin-top: 15px;
     padding-left: 15px; }
-    body .page-title .title_right ul li.active {
+    body .donhang .page-title .title_right ul li.active {
       font-weight: bold; }
-    body .page-title .title_right ul li {
+    body .donhang .page-title .title_right ul li {
       display: inline-block;
       padding-right: 10px;
       padding-right: 4px;
       border-right: 1px solid #D9DEE4; }
-      body .page-title .title_right ul li:last-child {
+      body .donhang .page-title .title_right ul li:last-child {
         border-right: 0; }
 
-body .btn-hoan-tat {
+body .donhang .btn-hoan-tat {
   margin-right: 0px; }
 
 /*# sourceMappingURL=app.css.map */
