--- a/development/source-code/resources/assets/sass/modules/_danh-sach-don-hang.scss
+++ b/development/source-code/resources/assets/sass/modules/_danh-sach-don-hang.scss
@@ -1,43 +1,46 @@
 body {
-    .top_search {
-        .form-control {
-            border: 1px solid $border-color;
-        }
-        .input-group-btn {
-            button {
+    .donhang {
+        .top_search {
+            .form-control,
+            .form-control:focus {
                 border: 1px solid $border-color;
-                border-left: 1px solid $border-color;
             }
-        }
-    }
-    .page-title {
-        .title_left {
-            .breadcrumb {
-                background-color: $main-background;
-                float: left;
-            }
-        }
-        .title_right {
-            width: 100%;
-            ul {
-                margin-top: 15px;
-                padding-left: 15px;
-                li.active {
-                    font-weight: bold;
+            .input-group-btn {
+                button {
+                    border: 1px solid $border-color;
+                    border-left: 1px solid $border-color;
                 }
-                li {
-                    display: inline-block;
-                    padding-right: 10px;
-                    padding-right: 4px;
-                    border-right: 1px solid $border-color;
-                    &:last-child {
-                        border-right: 0;
+            }
+        }
+        .page-title {
+            .title_left {
+                .breadcrumb {
+                    background-color: $main-background;
+                    float: left;
+                }
+            }
+            .title_right {
+                width: 100%;
+                ul {
+                    margin-top: 15px;
+                    padding-left: 15px;
+                    li.active {
+                        font-weight: bold;
+                    }
+                    li {
+                        display: inline-block;
+                        padding-right: 10px;
+                        padding-right: 4px;
+                        border-right: 1px solid $border-color;
+                        &:last-child {
+                            border-right: 0;
+                        }
                     }
                 }
             }
         }
-    }
-    .btn-hoan-tat {
-        margin-right: 0px;
+        .btn-hoan-tat {
+            margin-right: 0px;
+        }
     }
 }
